<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="serverURL">http://sbquiz-LoadB-IjrZcBpMWLNf-e4573a08806a0b6f.elb.eu-west-2.amazonaws.com:8080</string>
    <string name="EndText">Quiz finished! Here is your score: </string>
    <string name="empty" />
    <string name="slash">/</string>
    <string name="answerButton1" />
    <string name="answerButton2" />
    <string name="answerButton3" />
    <string name="answerButton4" />
    <string name="nextButtonText">Next Question</string>
</resources>