<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myQuizApp.QuestionsActivity">

    <TextView
        android:id="@+id/questionBox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <RadioGroup
        android:id="@+id/answerGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answerButton1"
            android:text="@string/answerButton1"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answerButton2"
            android:text="@string/answerButton2"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answerButton3"
            android:text="@string/answerButton3"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answerButton4"
            android:text="@string/answerButton4"
            android:onClick="onRadioButtonClicked"
            />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextButton"
        android:text="@string/nextButtonText"
        android:onClick="onNextButtonClicked"
        />

</LinearLayout>