<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myQuizApp.EndQuizActivity"
    android:columnCount="3"
    android:rowCount="2">

    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EndText"
        />

    <TextView
        android:layout_column="0"
        android:layout_row="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreBox"
        android:text="@string/empty"
        />

    <TextView
        android:layout_row="1"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        />
    <TextView
        android:layout_row="1"
        android:layout_column="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionNumber"
        android:text="@string/empty"
        />
</GridLayout>